# eval-connections

./: .gitignore  AGENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: run-evaluation.yml
docs/: classic.html  classic.md  index.html  results.md  results_table_gt.html
docs/logs/: 2025-10-02T03-31-59_gemini-flash.html  2025-10-02T04-17-58_grok4-fast.html  2025-10-02T04-18-18_sonnet-4.5.html  2025-10-03T06-46-18_grok4-fast.html  2025-10-03T22-24-00_gpt5-mini.html  2025-10-03T22-24-21_o3.html  2025-10-03T22-24-39_gpt5.html  2025-10-16T03-36-12_haiku-4.5.html  2025-10-18T19-29-16_ernie-4.5.html  2025-10-18T19-29-21_glm-4.6.html  2025-10-18T19-31-21_deepseek-r1.html  2025-10-18T19-33-44_gemini-2.5.html  2025-10-18T19-34-10_gpt-oss-120b.html  2025-10-18T19-34-33_gpt-oss-20b.html  2025-10-18T19-57-26_qwen3-max.html  2025-10-18T19-58-13_kimi-k2.html  2025-10-18T23-08-46_grok4.html  2025-11-06T23-17-31_phi-4.html  2025-11-12T20-08-45_kimi-k2-thinking.html  2025-11-16T17-58-18_sherlock-think-alpha.html  2025-11-16T18-08-23_sherlock-dash-alpha.html  2025-11-24T19-46-16_opus-4.5.html  (+154 more)
inputs/: connections_puzzles.yml  model_mappings.yml  prompt_template.xml  prompt_template_oneshot.xml  rate_limits.yml  test_battery.yml
results/: results_table_gt.html
scripts/: backfill_oneshot.py  create_results_mviz.py  create_results_table_gt.py  dedupe_motherduck.py  extract_summaries.py  fix_nonbyok_upstream_postings.py  generate_logs_view.py  load_controllog_to_motherduck.py  reports_controllog.py
tests/: __init__.py  test_cli.py  test_core.py  test_rate_limiter.py
(+18 files in other folders)
