[project]
name = "connections-eval"
version = "0.1.0"
description = "Evaluate AI models on New York Times Connections puzzles"
authors = [
    {name = "connections-eval", email = "dev@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
connections_eval = "connections_eval.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
